--- a/.github/workflows/pytest_default_order.yml
+++ b/.github/workflows/pytest_default_order.yml
@@ -1,59 +1,46 @@
-name: Run tests
+
+name: pytest_default_order
 
 on:
   push:
-    branches:
-      - main
-      - '*.x'
-  pull_request:
-  # Run weekly on Monday at 1:23 UTC
-  schedule:
-  - cron:  '23 1 * * 1'
   workflow_dispatch:
 
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
-    # Disable scheduled CI runs on forks
-    if: github.event_name != 'schedule' || github.repository_owner == 'ipython'
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ["3.10", "3.11", "3.12"]
+        os: [ubuntu-latest] #[ubuntu-latest, windows-latest]
+        python-version: ["3.12"] # ["3.10", "3.11", "3.12"]
         deps: [test_extra]
         # Test all on ubuntu, test ends on macos
-        include:
-          - os: macos-latest
-            python-version: "3.10"
-            deps: test_extra
-          - os: macos-latest
-            python-version: "3.11"
-            deps: test_extra
-          # Tests minimal dependencies set
-          - os: ubuntu-latest
-            python-version: "3.11"
-            deps: test
-          # Tests latest development Python version
-          - os: ubuntu-latest
-            python-version: "3.13-dev"
-            deps: test
-          # Installing optional dependencies stuff takes ages on PyPy
-          - os: ubuntu-latest
-            python-version: "pypy-3.10"
-            deps: test
-          - os: windows-latest
-            python-version: "pypy-3.10"
-            deps: test
-          - os: macos-latest
-            python-version: "pypy-3.10"
-            deps: test
-          # Temporary CI run to use entry point compatible code in matplotlib-inline.
-          - os: ubuntu-latest
-            python-version: "3.12"
-            deps: test_extra
-            want-latest-entry-point-code: true
+        # include:
+        #   - os: macos-latest
+        #     python-version: "3.10"
+        #     deps: test_extra
+        #   - os: macos-latest
+        #     python-version: "3.11"
+        #     deps: test_extra
+        #   # Tests minimal dependencies set
+        #   - os: ubuntu-latest
+        #     python-version: "3.11"
+        #     deps: test
+        #   # Tests latest development Python version
+        #   # - os: ubuntu-latest
+        #   #   python-version: "3.13-dev"
+        #   #   deps: test
+        #   # Installing optional dependencies stuff takes ages on PyPy
+        #   - os: ubuntu-latest
+        #     python-version: "pypy-3.10"
+        #     deps: test
+        #   - os: windows-latest
+        #     python-version: "pypy-3.10"
+        #     deps: test
+        #   - os: macos-latest
+        #     python-version: "pypy-3.10"
+        #     deps: test
 
     steps:
     - uses: actions/checkout@v3
@@ -87,27 +74,32 @@ jobs:
     - name: Check manifest
       if: runner.os != 'Windows'  # setup.py does not support sdist on Windows
       run: check-manifest
-
-    - name: Install entry point compatible code (TEMPORARY)
-      if: matrix.want-latest-entry-point-code
-      run: |
-        python -m pip list
-        # Not installing matplotlib's entry point code as building matplotlib from source is complex.
-        # Rely upon matplotlib to test all the latest entry point branches together.
-        python -m pip install --upgrade git+https://github.com/ipython/matplotlib-inline.git@main
-        python -m pip list
-
+    - name: Install pytest-ranking
+      run: pip install pytest-ranking
+    - name: Restore pytest-ranking cache
+      id: restore-pytest-ranking-cache
+      if: always()
+      uses: actions/cache/restore@v4
+      with:
+        path: ${{ github.workspace }}/.pytest_cache/v/pytest_ranking_data
+        key: pytest-ranking-cache-${{ github.workflow }}-${{ runner.os }}-${{ matrix.python }}
     - name: pytest
       env:
         COLUMNS: 120
       run: |
-        pytest --color=yes -raXxs ${{ startsWith(matrix.python-version, 'pypy') && ' ' || '--cov --cov-report=xml' }} --json-report --json-report-file=./report-${{ matrix.python-version }}-${{runner.os}}.json --maxfail=15
+        pytest -v -r x --durations=0 --color=yes -raXxs ${{ startsWith(matrix.python-version, 'pypy') && ' ' || '--cov --cov-report=xml' }} --json-report --json-report-file=./report-${{ matrix.python-version }}-${{runner.os}}.json
+    - name: Save pytest-ranking cache
+      id: save-pytest-ranking-cache
+      if: always()
+      uses: actions/cache/save@v4
+      with:
+        path: ${{ github.workspace }}/.pytest_cache/v/pytest_ranking_data
+        key: pytest-ranking-cache-${{ github.workflow }}-${{ runner.os }}-${{ matrix.python }}-${{ github.run_id }}
     - uses: actions/upload-artifact@v3
       with:
           name: upload pytest timing reports as json
           path: |
             ./report-*.json
-
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
