--- a/.github/workflows/random_order.yml
+++ b/.github/workflows/random_order.yml
@@ -87,7 +87,7 @@ jobs:
       env:
         COLUMNS: 120
       run: |
-        pytest -v -r x --durations=0 --color=yes -raXxs ${{ startsWith(matrix.python-version, 'pypy') && ' ' || '--cov --cov-report=xml' }} --json-report --json-report-file=./report-${{ matrix.python-version }}-${{runner.os}}.json --rank --rank-weight=0-0-0
+        pytest -v -r x --durations=0 --color=yes -raXxs ${{ startsWith(matrix.python-version, 'pypy') && ' ' || '--cov --cov-report=xml' }} --json-report --json-report-file=./report-${{ matrix.python-version }}-${{runner.os}}.json --rank --rank-weight=0-0-0 --rank-level=file
     - name: Save pytest-ranking cache
       id: save-pytest-ranking-cache
       if: always()
