--- a/.github/workflows/pytest_default_order.yml
+++ b/.github/workflows/pytest_default_order.yml
@@ -95,9 +95,11 @@ jobs:
       with:
         path: ${{ github.workspace }}/.pytest_cache/v/pytest_ranking_data
         key: pytest-ranking-cache-${{ github.workflow }}-${{ runner.os }}-${{ matrix.python }}-${{ github.run_id }}
-    - uses: actions/upload-artifact@v3
+    - name: pytest-ranking upload test report json
+      id: pytest-ranking-upload-test-report-json
+      uses: actions/upload-artifact@v3
+      if: always()
       with:
-          name: pytest-ranking upload test report json
           path: |
             ./test-report.json
     - name: Upload coverage to Codecov
