--- a/.github/workflows/qtf_order.yml
+++ b/.github/workflows/qtf_order.yml
@@ -94,11 +94,10 @@ jobs:
       with:
         path: ${{ github.workspace }}/.pytest_cache/v/pytest_ranking_data
         key: pytest-ranking-cache-${{ github.workflow }}-${{ runner.os }}-${{ matrix.python }}-${{ github.run_id }}
-    - name: pytest-ranking upload test report json
-      id: pytest-ranking-upload-test-report-json
-      uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v3
       if: always()
       with:
+          name: pytest-ranking upload test report json
           path: |
             ./test-report.json
     - name: Upload coverage to Codecov
